tests/ui/async-await/async-fn/mbe-async-trait-bound-theoretical-regression.stderr
error: ty
  --> $DIR/mbe-async-trait-bound-theoretical-regression.rs:8:19
   |
LL |     ($ty:ty) => { compile_error!("ty"); };
   |                   ^^^^^^^^^^^^^^^^^^^^
...
LL | demo! { impl async Trait }
   | -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `demo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: ty
  --> $DIR/mbe-async-trait-bound-theoretical-regression.rs:8:19
   |
LL |     ($ty:ty) => { compile_error!("ty"); };
   |                   ^^^^^^^^^^^^^^^^^^^^
...
LL | demo! { dyn async Trait }
   | ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `demo` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: async closures are unstable
  --> $DIR/mbe-async-trait-bound-theoretical-regression.rs:15:14
   |
LL | demo! { impl async Trait }
   |              ^^^^^
   |
   = note: see issue #62290 <https://github.com/rust-lang/rust/issues/62290> for more information
   = help: add `#![feature(async_closure)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: to use an async block, remove the `||`: `async {`

error[E0658]: async closures are unstable
  --> $DIR/mbe-async-trait-bound-theoretical-regression.rs:18:13
   |
LL | demo! { dyn async Trait }
   |             ^^^^^
   |
   = note: see issue #62290 <https://github.com/rust-lang/rust/issues/62290> for more information
   = help: add `#![feature(async_closure)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: to use an async block, remove the `||`: `async {`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
